# mxnet-cookbook

./: .gitignore  .style.yapf  Cookbook.md  LICENSE  MXNetCheatsheet.md  Pipfile  README.md  pyproject.toml  pythonpath
center_loss/: center_loss.py
custom_loss/: makeloss_module.py
dcgan/: train_gluon.py
image_classifier/: mnist_gluon.py  mnist_module.py
linear_regression/: linear_regression_gluon.py  linear_regression_module.py  linear_regression_module_intermediate.py
pix2pix/: train_gluon.py
src/cartonifier/: cartonifier.py
src/custom_layer/: dense_normalized_gluon.py
src/dcgan/: dcgan_gluon.py
src/export_import_model/: main.py
src/faster_rcnn/: README.md  diagram.graphml  faster_rcnn_predict.py  interactive_notes.py  scratch.py
src/gan/: gan_gluon.py  wgan_gluon.py
src/image_classifier/: mnist_gluon.py  mnist_gluon_mod.py  mnist_gluon_mxboard.py
src/linear_regression/: linear_regression_gluon.py  linear_regression_module_intermediate.py  linear_regression_torch.py
src/linear_regression_1d/: lr_1d_gluon.py  lr_1d_gluon_optim.py  lr_1d_numpy.py  lr_1d_torch.py  lr_1d_torch_optim.py
src/logistic_regression/: logistic_regression_gluon.py  logistic_regression_torch.py
src/mxnet_cookbook/dcgan/: model.py
src/mxnet_cookbook/faster_rcnn/: faster_rcnn_predict.py
src/mxnet_cookbook/image_classifier/: mnist_module.py
src/mxnet_cookbook/pix2pix/: train_gluon.py
src/mxnet_cookbook/transfer_learning/: README.md  transfer_learning_gluon.py  transfer_learning_gluon_freeze.py
src/pix2pix/: pix2pix_gluon.py  pix2pix_gluon_mgpu.py
src/scratch/: create_a_neural_network.py
src/style_transfer/: neural_style.py  style_transfer_gluon.py  style_transfer_v2_gluon.py
src/transfer_learning/: prepare_dataset.sh  transfer_learning_gluon_freeze.py  transfer_learning_gluon_freeze_RN50.py
src/voc/: voc_dataset.py
tests/: test_mxnet_cookbook.py
