[tool.poetry]
name = "mxnet-cookbook"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <gilbert@deep-impact.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
mxnet = "^1.6.0"
matplotlib = "^3.1.3"
gluoncv = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.12.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
