[tool.poetry]
name = "mxnet-cookbook"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mxnet = {version = "^1.8.0",   markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"}
mxnet-cu102 = {version = "^1.8.0", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
matplotlib = "^3.1.3"
gluoncv = "^0.8.0"
mxboard = "^0.1.0"
opencv-python = "^4.5.0"
tensorboard = "^2.5.0"
torch = "^1.9.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.12.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
